--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
     <style>
-        .error { color: red; }
-        .success { color: green; }
+        .error-message { color: red; }
+        .success-message { color: green; }
     </style>
 </head>
 <body>
     <form id="signupForm">
         <label for="email">Email:</label>
-        <input type="text" id="email" placeholder="Example@gmail.com">
-        <span id="emailError" class="error">Make sure email is more than 3 characters and has @ and .</span>
+        <input type="text" id="email" placeholder="example@example.com">
+        <span id="emailErr" class="error-message">Invalid email. Make sure it contains @ and .</span>
         <br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" placeholder="Your Password">
-        <span id="passwordError" class="error">Make sure password is more than 8 characters.</span>
-        <span id="successMessage" class="success" style="display: none;">All good to go!</span>
+        <span id="passwordErr" class="error-message">Password must be longer than 8 characters.</span>
+        <span id="formSuccess" class="success-message" style="display: none;">Form is ready to submit!</span>
         <br><br>
         <button type="button" onclick="submitForm()">Submit</button>
     </form>
